--- a/sage_latex_template_3/Bins.Rmd
+++ b/sage_latex_template_3/Bins.Rmd
@@ -801,8 +801,6 @@ make.Ks = function(M, vars, D, Plot, S, ToC){
 D = read_excel("ArtData.xlsx",  sheet=2)[1:137,]
 D = as.data.frame(D)
 
-setwd("/Users/gwynn/Documents/PostDocKleinmanLab/Bins/Shiny/Again/sage_latex_template_3")
-
 ## Final weighting for randomization
 V = list(list("Attrib_Days_Month", 1, "Pt Days", 0, 80),
          list("Outcome_Saureus", 4, "S auer Rate", 0, 0.15),
@@ -908,7 +906,6 @@ Our investigators used this approach with 16 variables. After trying many streng
 One variable in Figure 2, median length of stay, is fixed on one value. For this variable, all computed randomisations had the same mean difference in median length of stay in the control and treatment arm. When randomisation occurs we can be almost certain that we will attain this mean difference in median length of stay in the treatment and control arms.
 
 ```{r FullGraph, echo=FALSE, fig.align='center', fig.show='asis', message=FALSE, warning=FALSE, cache.lazy=TRUE}
-setwd("/Users/gwynn/Documents/PostDocKleinmanLab/Bins/Shiny/Again/sage_latex_template_3")
 ## install.packages("designmatch")
 library(designmatch)
 
@@ -1619,11 +1616,8 @@ make.Ks = function(M, vars, D, Plot, S, ToC){
   P
 } ## closing the function make.Ks
 
-setwd("/Users/gwynn/Documents/PostDocKleinmanLab/Bins/Again1")
-D = read_excel("SwapOut_Randomization_2017_4_27_FINAL.xlsx",  sheet=2)[1:137,]
+D = read_excel("ArtData.xlsx",  sheet=2)[1:137,]
 D = as.data.frame(D)
-
-setwd("/Users/gwynn/Documents/PostDocKleinmanLab/Bins/Shiny/Again/sage_latex_template_3")
 
 ## Final weighting for randomization
 V = list(list("Attrib_Days_Month", 1, "Pt Days", 0, 80),
