--- a/sage_latex_template_3/Bins.tex
+++ b/sage_latex_template_3/Bins.tex
@@ -92,145 +92,140 @@
 \maketitle
 \begin{abstract}
 Matching in cluster-randomized trials (CRTs) is important, but there is
-no best practice. When baseline data is available, we suggest a strategy
-that can be used to identify a preferred weighting of pertinent
-variables to achieve the desired balance between treatment and control
-groups across numerous potential confounding variables. This strategy
-involves iteratively: 1) computing the Mahalanobis distance, 2) finding
-the pairs that minimize the overall within-pair distance; 3)
-rerandomizing multiple times to generate the potential between-arm
-imbalance; then 4) reweighting the potential confounder. To aid in the
-evaluation of step 3, we plot the between-arm differences for each
-variable with a parallel-coordinates plot. Investigators can compare
-plots of different weighting scheme to determine the one that best suits
-their needs. We demonstrate application of the approach with the
-Swap-Out trial.
+no best practice describing how to make matches. When baseline data is
+available, we suggest a strategy that can be used to achieve the desired
+balance between treatment and control groups across numerous potential
+confounding variables. This strategy involves iteratively: 1) computing
+the Mahalanobis distance, 2) finding the pairs that minimize the overall
+within-pair distance; 3) rerandomizing multiple times to generate the
+potential between-arm imbalance; then 4) reweighting the potential
+confounders. To aid in the evaluation of step 3, we plot the between-arm
+differences for each variable with a parallel-coordinates plot.
+Investigators can compare plots of different weighting schemes to
+determine the one that best suits their needs. We demonstrate
+application of the approach with the Swap-Out trial.
 \end{abstract}
 
 \section{Introduction}\label{introduction}
 
 Individually randomized trials (IRTs) with blinding are the ``strongest
 study design available'' \citep{gatsonis2017methods} to test the
-efficacy of a treatment or an intervention. Unfortunately, cost and
-study design amongst other things mean some interventions can not be
-randomized on an individual level.
+efficacy of a treatment or an intervention. Unfortunately, for design
+reasons some interventions must be delivered to groups of subjects. In
+these cases, it is at least cost-efficient and possibly scientifically
+necessary to gather data on subjects that are correlated with one
+another. For example, suppose education researchers need to evaluate
+teacher training for elementary school teachers with respect to its
+effect on literacy skills in third graders. Randomizing third graders to
+treatment or control conditions would not be practical-- it would imply
+training many, many, teachers, and ignoring the majority of students as
+well as the variability of student within class. In addition, some rural
+schools may have only one teacher, further complicating matters.
+Instead, researchers would randomize teachers, schools, or counties to
+the training or to the control condition and evaluate the effect on
+multiple students in each classroom. Trials where groups are randomized
+are called group-randomized or cluster-randomized trials (CRTs). Three
+reasons for conducting a CRTs are: (i) implementation occurs at the
+cluster level, (ii) to avoid contamination, and (iii) to measure
+intervention effects among cluster members who do not receive treatment
+\citep{balzer2012match, CRTrials2009}. CRTs are ``the gold standard when
+allocation of identifiable groups is necessary''
+\citep{murray2004design}.
 
-For design reasons some interventions must be delivered to groups of
-subjects. In these cases, it is at least cost-efficient and possibly
-scientifically necessary to gather data on subjects that are correlated
-with one another. For example, suppose education researchers need to
-evaluate teacher training for elementary school teachers with respect to
-it's effect on literacy skills in third graders. Randomizing third
-graders to treatment or control conditions would not be practical-- it
-would imply training many, many teachers, and ignoring the majority of
-students as well as the variability of student within class. In
-addition, some rural schools may have only one teacher, further
-complicating matters. Instead, researchers would randomize teachers,
-schools, or counties to the training or to the control condition and
-evaluate the effect on many students in each classroom. Trials where
-groups are randomized are called group-randomized or cluster-randomized
-trials (CRTs). Three reasons for conducting a CRTs are: (i)
-implementation occurs at the cluster level, (ii) to avoid contamination,
-and (iii) to measure intervention effects among cluster members who do
-not receive treatment \citep{balzer2012match, CRTrials2009}. CRTs are
-``the gold standard when allocation of identifiable groups is
-necessary'' \citep{murray2004design}.
+One challenge in CRTs is their limited sample size of randomizable
+units. Most CRTs have less than 30 independent units to randomize,
+though each unit may have thousands of individuals
+\citep{balzer2012match}. In large IRTs, investigators expect
+randomization to balance confounders across each arm of the trial. The
+smaller number of randomizable units in CRTs makes imbalance a threat to
+the causal interpretation of any observed treatment effect. Stratified
+randomization, in which similar units are grouped together prior to
+randomization, is one solution to this. Scholars debate the sizes of
+these groups. In particular there is discussion about the merits of
+matching, which involves grouping 2 units together, vs.~stratification,
+where many more than 2 units are grouped\citep{PMVsStrat}. This article
+discusses matching.
 
-One challenge in CRTs is their limited sample size. Most CRTs have less
-than 30 independent units to randomize, though each unit may have
-thousands of dependent individuals \citep{balzer2012match}. In large
-IRTs, investigators expect randomization to balance confounders across
-each arm of the trial. The reduced size of CRTs makes imbalance a threat
-to the causal interpretation of any observed treatment effect. Grouping
-similar units together, then randomizing, is one solution to this.
-Scholars debate the sizes of these groups, in particular, matching,
-which involves grouping 2 units together, vs.~stratifying, where many
-more than 2 units are grouped\citep{PMVsStrat}. This article discusses
-matching.
-
-Many authors debate matching in CRTs
+Many authors debate the value of matching at all in CRTs
 \citep{balzer2012match, CRTrials2009, gatsonis2017methods, diehr1995breaking, murray1998design, imai2009essential, PMVsStrat, donner2007merits, klar1997merits, donner2000design, martin1993effect}.
 Murray argues that ``the choice of matching or stratification {[}of{]}
 factors is critical to the success of the procedure''
-\citep{murray1998design}. Some agree that caution must be used when
+\citep{murray1998design}. Others suggest that caution must be used when
 matching a small number of clusters due to the decrease in power
 \citep{donner2000design, klar1997merits, balzer2012match, martin1993effect}.
-Breaking matches, i.e., ignoring the matching during data analysis,
+Breaking the matches, i.e., ignoring the matching during data analysis,
 addresses this \citep{diehr1995breaking}, but perhaps only when there
-are a small number of large clusters \citep{donner2007merits}. Others
-argue that matching is effective in a small number of clusters as it
-``increases the chance of the intervention groups being well-balanced''
-\citep{donner2007merits}. Imai et al. argue that not matching, in small
-or large sample, is ``equivalent to discarding a considerable fraction
-of one's data'' \citep{imai2009essential}. However, in one trial
-``matching actually led to a loss in statistical efficiency''
+are a small number of large clusters \citep{donner2007merits}. Imai et
+al. argue that not matching, in small or large samples, is ``equivalent
+to discarding a considerable fraction of one's data''
+\citep{imai2009essential}. However, in one trial ``matching actually led
+to a loss in statistical efficiency''
 \citep[\citet{donner2000design}]{manun1994influence}. Despite all this
-debate few authors discuss how to match the clusters
+debate, few authors discuss how to match the clusters
 \citep{raab2001balance}.
 
 Our article is an extension of methods introduced previously
 \citep{gatsonis2017methods}. We suggest a method suitable for
 \(a \; priori\) matching using baseline data. In section 2 we outline
-our method, section 3 applies it to data for the Swap-Out trial, and
-section 4 is a brief discussion.
+our method, section 3 applies it to data for the Swap-Out trial, and in
+section 4 discuss the implications of our approach.
 
-\section{Methods }\label{methods}
+\section{Methods}\label{methods}
 
-To approach the complex topic of balancing randomization in CRTs we
-suggest a new approach. We match the clusters on many variables, using a
+We suggest a new approach to the complex topic of balancing
+randomization in CRTs. We match the clusters on many variables, using a
 ``weighting'' scheme to suggest which variables are most important. Then
-we perform many randomizations to obtain a distribution of the possible
-arm assignments that might be obtained when official randomization
-occurs. Investigators assess these distributions to determine if
-potential randomizations result in sufficiently balanced treatment
-assignments. If not, the weighting scheme is adjusted and the process
-begins again. The details follow.
+we perform many ``false'' or practice randomizations to obtain a
+distribution of the possible arm assignments that might be obtained when
+official randomization occurs. Investigators assess these distributions
+to determine if potential randomizations would result in sufficiently
+balanced treatment assignments. If not, the weighting scheme is adjusted
+and the process begins again. The details follow.
 
 The initial step involves prioritizing variables \((1, 2,..., n)\) from
 units \((1, 2, ..., m)\) to be randomized. We have
 
 \begin{eqnarray*}
- \overline{V_1} & = & (v_{11}, v_{12},..., v_{1n})\\
- \overline{V_2} & = & (v_{21}, v_{22},..., v_{2n})\\
+ V_1 & = & (v_{11}, v_{12},..., v_{1n})\\
+ V_2 & = & (v_{21}, v_{22},..., v_{2n})\\
  \vdots & = & \vdots\\    
- \overline{V_m} & = & (v_{m1}, v_{m2},..., v_{mn})\\
+ V_m & = & (v_{m1}, v_{m2},..., v_{mn})\\
 \end{eqnarray*}
 
-where \(v_{ij}\) is the \(i^{th}\) variable from unit \(j\): each
-\(\overline{V_j}\) contains pertinent variables from unit \(j\). From
-here, we compute the Mahalanobois distance between two units. This is
-the generalized \(n\)-dimensional distance across the variables; for two
+where \(v_{ij}\) is the \(j^{th}\) variable from unit \(i\): each
+\(V_i\) contains pertinent variables from unit \(i\). From here, we
+compute the Mahalanobois distance between two units. This is the
+generalized \(n\)-dimensional distance across the variables; for two
 units \(a\) and \(b\) it is calculated as
-\(d(\overline{V_a}, \overline{V_b}) = \sum_{k=1}^n \frac{(v_{ak} - v_{bk})^2}{s_k^2}\)
-where
-\(s_k^2 = \frac{1}{m} \sum_{l=1}^m(v_{lk} - \overline{v_{\cdot k}})\)
-and \(\overline{v_{\cdot k}} = \frac{1}{n} \sum_{i = 1}^m v_{ik}\). Then
-we find the pairs of clusters that minimize the global Mahalanobis
-distance across all of the pairs of clusters. This can be done in the R
-statistical programming environment \citep{R} using the \texttt{nmatch}
-function in the \texttt{designmatch} \citep{nmatch} package.
+\(d(V_a, V_b) = \sum_{k=1}^n \frac{(v_{ak} - v_{bk})^2}{s_k^2}\) where
+\(s_k^2 = \frac{1}{m} \sum_{l=1}^m(v_{lk} - v_{\cdot k})\) and
+\(v_{\cdot k} = \frac{1}{n} \sum_{i = 1}^m v_{ik}\). Then we find the
+pairs of clusters that minimize the global Mahalanobis distance across
+all of the pairs of clusters. This can be done in the R statistical
+programming environment \citep{R} using the \texttt{nmatch} function in
+the \texttt{designmatch} package \citep{nmatch}.
 
-Once the matching is completed and we have pairs
-\((\overline{C_{11}}, \overline{C_{12}}), (\overline{C_{21}}, \overline{C_{22}}), ..., (\overline{C_{\frac{m}{2}1}}, \overline{C_{\frac{m}{2}2}}),\)
+Once the matching is completed, we have pairs
+\((C_{11}, C_{12}), (C_{21}, C_{22}), ..., (C_{\frac{m}{2}1}, C_{\frac{m}{2}2}),\)
 where \(C_{ij}\) is the \(j\)th cluster in the \(i\)th pair. The first
 match in each pair will be randomized to either treatment or control,
-the second to the remainder. If cluster \(C_{11}\) is randomized to
+the second to the other arm. If cluster \(C_{11}\) is randomized to
 treatment, we denote this as \(C_{11}^T\), and this implies
 \(C_{12}^C\), where the superscript indicates either treatment (\(T\))
 or control (\(C\)). Next, we find the per variable difference between
 the two groups:
 
 \begin{eqnarray*}
- d_i = \frac{| \sum_{j = 1}^{\frac{m}{2}}C_{ij}^T - \sum_{j = 1}^{\frac{m}{2}}C_{ij}^C |}{\frac{m}{2}} 
+ d_j = \frac{| \sum_{i = 1}^{\frac{m}{2}}C_{ij}^T - \sum_{i = 1}^{\frac{m}{2}}C_{ij}^C |}{\frac{m}{2}} 
 \end{eqnarray*}
 
-for \(i = 1, 2, ..., n.\) This generates the vector
-\(d^* = (d_1, \ldots, d_n)\) of the average pairwise difference between
+for \(j = 1, 2, ..., n.\) This generates the vector
+\(D = (d_1, \ldots, d_n)\) of the average pairwise difference between
 the arms for each variable. We repeat this process of randomization
-\(R\) times and find \(d^*_r\) the vector of average differences between
+\(R\) times and find \(D_r\), the vector of average differences between
 the two arms for the \(r\)th re-randomization. To visualize we draw a
-parallel coordinates plot where the \(i^{th}\) axis plots all \(d^*_r\)
-for \(r = 1, 2, ..., R.\)
+parallel coordinates plot where the \(j^{th}\) axis plots all \(D_r\)
+for \(r = 1, 2, ..., R\), as shown in the Figures below.
 
 The investigators may find the distribution of possible randomizations
 unacceptable, for example because the mean distance between the arms is
@@ -245,20 +240,21 @@ the strength of matching on each variable. We have
 which we combine to form
 
 \begin{eqnarray*}
- \overline{V_1^*} & = & (v_{11}^*, v_{12}^*,..., v_{1n}^*) \\
- \overline{V_2^*} & = & (v_{21}^*, v_{22}^*,..., v_{2n}^*) \\
+ V_1^* & = & (v_{11}^*, v_{12}^*,..., v_{1n}^*) \\
+ V_2^* & = & (v_{21}^*, v_{22}^*,..., v_{2n}^*) \\
  \vdots & = & \vdots\\    
- \overline{V_m^*} & = & (v_{m1}^*, v_{m2}^*,..., v_{mn}^*) .\\
+ V_m^* & = & (v_{m1}^*, v_{m2}^*,..., v_{mn}^*) .\\
 \end{eqnarray*}
 
-If \(s_a > s_b\), this has the effect of making clusters ``further
-apart'' with respect to variable \(b\), KEN I CHANGED THIS TO b B/C IT
-DIDN'T MAKE SENSE TO ME WITH a THERE. IS THAT RIGHT? so that the when we
-re-run the matching algorithm, we will get closer matches for variable
-\(a\) than variable \(b\). After selecting \(S\) We again find \(d^*_r\)
-and plot them. The penalty in this process is that closer matches for
-variable \(a\) are likely to imply reduced closeness in another
-variable, so compromises must be made.
+If \(s_a > s_b\), this has the effect of increasing the distance between
+units for variable \(a\), relative to variable \(b\). Then,
+counter-intuitively, when we re-run the matching algorithm, we will get
+closer matches for variable \(a\) than variable \(b\). After selecting
+\(S\) We again find the between-arm differences for each variable,
+\(D_r\) and plot them. The cost of a high weight for variable \(a\) in
+this process is that closer matches for variable \(a\) are likely to
+imply reduced closeness in another variable, so compromises must be
+made.
 
 \section{Results}\label{results}
 
@@ -400,8 +396,8 @@ all the re-randomizations. That is, for this variable, every assignment
 of treatment and control within the pairs results in the same mean
 difference in median length of stay between the control and treatment
 arms. This is likely due to the very small variability on this
-variable-- the vast majority of the hospitals' had the same median
-length of stay.
+variable-- the vast majority of the hospitals had the same median length
+of stay.
 
 \begin{figure}
 
@@ -422,20 +418,20 @@ method prior to randomizing to help ensure balance between treatment and
 control arms.
 
 If investigators would like to use this method on studies with more than
-\(2\) arms, \(d^*_{i}\) can be redefined as, for example, the standard
+\(2\) arms, \(D_{r}\) can be redefined as, for example, the standard
 deviation between among the arms.
 
 In Swap-Out the number of units to randomize was odd. To address this,
 our \texttt{Shiny} web application allowed our investigators to choose
-if the unmatched unit was in the treatment or control arm. The \(d_{i}\)
+if the unmatched unit was in the treatment or control arm. The \(D_{r}\)
 was adjusted accordingly.
 
-We plan to publish the \texttt{Shiny} web app described above for
-investigators to use. This application will eventually be an interactive
+We plan to publish the \texttt{Shiny} web app described above for any
+investigator to use. This application will eventually be an interactive
 plot that enables users to click on each axis and view where low and
 high draws of that variable fall for other variables.
 
-\bibliography{bibliography.bib}
+\bibliography{bibliography}
 
 
 \end{document}
