--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -32,19 +32,11 @@
 @article{nmatch,
   title={designmatch: Construction of Optimally Matched Samples for Randomized Experiments and Observational Studies that are Balanced and Representative by Design},
   author={Zubizarreta, J. R. and Kilcioglu, C. },
-  publisher={R package version 0.2.0}
+  publisher={R package version 0.2.0},
+  year={2017}
 }
 
-@article{diehr1995breaking,
-  title={Breaking the matches in a paired t-test for community interventions when the number of pairs is small},
-  author={Diehr, Paula and Martin, Donald C and Koepsell, Thomas and Cheadle, Allen},
-  journal={Statistics in medicine},
-  volume={14},
-  number={13},
-  pages={1491--1504},
-  year={1995},
-  publisher={Wiley Online Library}
-}
+
 
 @article{doi,
   author = {Greevy, Robert  and Lu, Bo  and Silber, Jeffrey H. and Rosenbaum, Paul },
@@ -136,8 +128,9 @@
 @online{SOTrial, 
   author  = {Platt, Richard}, 
   title   = {Mupirocin-Iodophor ICU Decolonization Swap Out Trial}, 
-  url     = {https://clinicaltrials.gov/ct2/show/NCT03140423?term=swap+out&rank=1}, 
-  urldate = {2017-05-08}, 
+  url     = {https://clinicaltrials.gov/ct2/show/NCT03140423}, 
+  urldate = {2017-05-08},
+  year = {2017}
 }
 
 
@@ -146,7 +139,10 @@
 @article{balzer2012match,
   title={Why Match in Individually and Cluster Randomized Trials?},
   author={Balzer, Laura B and Petersen, Maya L and van der Laan, Mark J},
-  year={2012}
+  year={2012},
+  journal={U.C. Berkeley Division of Biostatistics Working Paper Series},
+  number={294},
+  url={http://biostats.bepress.com/ucbbiostat/paper294}
 }
 
 @article{donner2007merits,
@@ -188,6 +184,8 @@
   year={1995},
   publisher={Wiley Online Library}
 }
+
+
 
 @article{donner2004pitfalls,
   title={Pitfalls of and controversies in cluster randomization trials},
@@ -251,16 +249,6 @@
 }
 
 
-@article{diehr1995breaking,
-  title={Breaking the matches in a paired t-test for community interventions when the number of pairs is small},
-  author={Diehr, Paula and Martin, Donald C and Koepsell, Thomas and Cheadle, Allen},
-  journal={Statistics in medicine},
-  volume={14},
-  number={13},
-  pages={1491--1504},
-  year={1995},
-  publisher={Wiley Online Library}
-}
 
 
 @article{donner1996statistical,
@@ -286,7 +274,7 @@
 
 @book{3Bears,
   title={The Old Nursery Stories and Rhymes ... Illustrated by John Hassall},
-  author={Hassall, John,},
+  author={Hassall, John},
   year={1904},
   publisher={Blackie \& Son, London}
 }
@@ -311,12 +299,6 @@
   publisher={Chapman and Hall\/CRC}
 }
 
-@book{donner2000design,
-  title={Design and analysis of cluster randomization trials in health research},
-  author={Donner, Allan and Klar, Neil},
-  year={2000},
-  publisher={Arnold London, England}
-}
 
 @article{eldridge2006sample,
   title={Sample size for cluster randomized trials: effect of coefficient of variation of cluster size and analysis method},
@@ -381,16 +363,6 @@
 }
 
 
-@article{huang2013targeted,
-  title={Targeted versus universal decolonization to prevent ICU infection},
-  author={Huang, Susan S and Septimus, Edward and Kleinman, Ken and Moody, Julia and Hickok, Jason and Avery, Taliser R and Lankiewicz, Julie and Gombosev, Adrijana and Terpstra, Leah and Hartford, Fallon and others},
-  journal={New England Journal of Medicine},
-  volume={368},
-  number={24},
-  pages={2255--2265},
-  year={2013},
-  publisher={Mass Medical Soc}
-}
 
 @article{kish1965survey,
   title={Survey sampling},
@@ -451,16 +423,6 @@
   publisher={Wiley Online Library}
 }
 
-@article{martin1993effect,
-  title={The effect of matching on the power of randomized community intervention studies},
-  author={Martin, Donald C and Diehr, Paula and Perrin, Edward B and Koepsell, Thomas D},
-  journal={Statistics in medicine},
-  volume={12},
-  number={3-4},
-  pages={329--338},
-  year={1993},
-  publisher={Wiley Online Library}
-}
 
 @article{imai2009essential,
   title={The essential role of pair matching in cluster-randomized experiments, with application to the Mexican universal health insurance evaluation},
